--- a/src/index.html
+++ b/src/index.html
@@ -12,29 +12,23 @@
 
     <p>
       <i>
-        “Triveni’s unique and eclectic style pulls together strands from
-        western and eastern movements to reflect a strong inner life
-        experiencing the many faces of the world. In a resonant conversation
-        with the natural world Triveni filters out the intense beauty of
-        memories and nature.”
+        “Triveni’s unique and eclectic style pulls together strands from western and eastern movements to reflect a
+        strong inner life experiencing the many faces of the world. In a resonant conversation with the natural world
+        Triveni filters out the intense beauty of memories and nature.”
       </i>
     </p>
     <p>
       <i>
-        “Triveni’s unique and eclectic style pulls together strands from
-        western and eastern movements to reflect a strong inner life
-        experiencing the many faces of the world. In a resonant conversation
-        with the natural world Triveni filters out the intense beauty of
-        memories and nature.”
+        “Triveni’s unique and eclectic style pulls together strands from western and eastern movements to reflect a
+        strong inner life experiencing the many faces of the world. In a resonant conversation with the natural world
+        Triveni filters out the intense beauty of memories and nature.”
       </i>
     </p>
     <p>
       <i>
-        “Triveni’s unique and eclectic style pulls together strands from
-        western and eastern movements to reflect a strong inner life
-        experiencing the many faces of the world. In a resonant conversation
-        with the natural world Triveni filters out the intense beauty of
-        memories and nature.”
+        “Triveni’s unique and eclectic style pulls together strands from western and eastern movements to reflect a
+        strong inner life experiencing the many faces of the world. In a resonant conversation with the natural world
+        Triveni filters out the intense beauty of memories and nature.”
       </i>
     </p>
     <script src="./index.ts"></script>
