--- a/src/index.html
+++ b/src/index.html
@@ -8,29 +8,16 @@
   </head>
   <body>
     <ed-header></ed-header>
-    <my-element></my-element>
 
-    <p>
-      <i>
+    <section class="intro-section">
+      <div class="intro-overlay">
+      </div>
+      <div class="intro-text">
         “Triveni’s unique and eclectic style pulls together strands from western and eastern movements to reflect a
         strong inner life experiencing the many faces of the world. In a resonant conversation with the natural world
         Triveni filters out the intense beauty of memories and nature.”
-      </i>
-    </p>
-    <p>
-      <i>
-        “Triveni’s unique and eclectic style pulls together strands from western and eastern movements to reflect a
-        strong inner life experiencing the many faces of the world. In a resonant conversation with the natural world
-        Triveni filters out the intense beauty of memories and nature.”
-      </i>
-    </p>
-    <p>
-      <i>
-        “Triveni’s unique and eclectic style pulls together strands from western and eastern movements to reflect a
-        strong inner life experiencing the many faces of the world. In a resonant conversation with the natural world
-        Triveni filters out the intense beauty of memories and nature.”
-      </i>
-    </p>
+      </div>
+    </section>
     <script src="./index.ts"></script>
   </body>
 </html>
