fix intro component

--- a/src/index.html
+++ b/src/index.html
@@ -10,13 +10,7 @@
     <ed-header></ed-header>
 
     <section class="intro-section">
-      <div class="intro-overlay">
-      </div>
-      <div class="intro-text">
-        “Triveni’s unique and eclectic style pulls together strands from western and eastern movements to reflect a
-        strong inner life experiencing the many faces of the world. In a resonant conversation with the natural world
-        Triveni filters out the intense beauty of memories and nature.”
-      </div>
+      <ed-intro></ed-intro>
     </section>
     <script src="./index.ts"></script>
   </body>
