--- a/src/index.html
+++ b/src/index.html
@@ -7,11 +7,7 @@
     <title>Web site</title>
   </head>
   <body>
-    <ed-header></ed-header>
-
-    <section class="intro-section">
-      <ed-intro></ed-intro>
-    </section>
+    <ed-main></ed-main>
     <script src="./index.ts"></script>
   </body>
 </html>
