--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Tirveni</title>
+    <title>T.T.R. Creations</title>
     <link rel="icon" type="image/ico" href="assets/favicon.ico"/>
   </head>
   <body>
