--- a/src/index.html
+++ b/src/index.html
@@ -5,10 +5,40 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>T.T.R. Creations</title>
-    <link rel="icon" type="image/ico" href="assets/favicon.ico"/>
+    <link rel="icon" type="image/ico" href="assets/favicon.ico" />
   </head>
   <body>
     <ed-main></ed-main>
     <script src="./index.ts"></script>
+
+    <script>
+      const sw = 'service-worker.js'; // it is needed because parcel will not recognize this as a file and not precess in its manner
+
+      navigator.serviceWorker
+        .register(sw)
+        .then((registration) => {
+          registration.onupdatefound = () => {
+            const installingWorker = registration.installing;
+            if (installingWorker == null) {
+              return;
+            }
+            installingWorker.onstatechange = () => {
+              if (installingWorker.state === 'installed') {
+                if (navigator.serviceWorker.controller) {
+                  console.log(
+                    'New content is available and will be used when all ' +
+                      'tabs for this page are closed. See https://bit.ly/CRA-PWA.'
+                  );
+                } else {
+                  console.log('Content is cached for offline use.');
+                }
+              }
+            };
+          };
+        })
+        .catch((error) => {
+          console.error('Error during service worker registration:', error);
+        });
+    </script>
   </body>
 </html>
